
name:           gloss-asteroids
version:        0.1.0.0
synopsis:       Simple Asteroids-like game using Gloss
homepage:       https://github.com/pbv/gloss-asteroids
bug-reports:    https://github.com/pbv/gloss-asteroids/issues
author:         Pedro Vasconcelos
maintainer:     pbv@dcc.fc.up.pt
copyright:      2017 Pedro Vasconcelos
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

executable gloss-asteroids
  main-is: Main.hs
  hs-source-dirs:
    src
  ghc-options: -threaded -O2 -rtsopts
  build-depends:
    base >= 4.7 && < 5,
    random,
    gloss
  default-language: Haskell2010

